Add rolling and improve datetime snippets.

--- a/python_pandas_en.ipynb
+++ b/python_pandas_en.ipynb
@@ -2385,6 +2385,141 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Rolling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.rolling.html#pandas-dataframe-rolling\n",
+    "\n",
+    "For rolling over a time window, see https://pandas.pydata.org/pandas-docs/stable/timeseries.html#resampling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basic example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rolling with an aggregation window of size 2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = pd.Series([1., 0., 5., 2., 1.])\n",
+    "print(\"DATA:\")\n",
+    "print(s)\n",
+    "\n",
+    "mean_s = s.rolling(2).mean()\n",
+    "print()\n",
+    "print(\"ROLLING MEAN:\")\n",
+    "print(mean_s)\n",
+    "\n",
+    "sum_s = s.rolling(2).sum()\n",
+    "print()\n",
+    "print(\"ROLLING SUM:\")\n",
+    "print(sum_s)\n",
+    "\n",
+    "min_s = s.rolling(2).min()\n",
+    "print()\n",
+    "print(\"ROLLING MIN:\")\n",
+    "print(min_s)\n",
+    "\n",
+    "max_s = s.rolling(2).max()\n",
+    "print()\n",
+    "print(\"ROLLING MAX:\")\n",
+    "print(max_s)\n",
+    "\n",
+    "ax = s.plot(figsize=(18, 3), color=\"blue\")\n",
+    "mean_s.plot(color=\"red\", label=\"mean\", ax=ax)\n",
+    "sum_s.plot(color=\"green\", label=\"sum\", style=\"--\", alpha=0.5, ax=ax)\n",
+    "min_s.plot(color=\"black\", label=\"min\", style=\":\", alpha=0.25, ax=ax)\n",
+    "max_s.plot(color=\"black\", label=\"max\", style=\":\", alpha=0.25, ax=ax)\n",
+    "ax.legend();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### More realistic example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index = np.arange(0, 20, 0.05)\n",
+    "s = pd.Series(np.sin(index))\n",
+    "s = s + np.random.normal(scale=0.4, size=s.shape)\n",
+    "\n",
+    "ax = s.plot(figsize=(18, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rolling with an aggregation window of size 20."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s_mean = s.rolling(20).mean()\n",
+    "s_median = s.rolling(20).median()\n",
+    "s_min = s.rolling(20).min()\n",
+    "s_max = s.rolling(20).max()\n",
+    "\n",
+    "ax = s_mean.plot(y='duration', figsize=(18, 8), color=\"red\", label=\"mean\", alpha=0.75)\n",
+    "s_median.plot(ax=ax, color=\"blue\", label=\"median\", alpha=0.75)\n",
+    "s_min.plot(ax=ax, color=\"blue\", alpha=0.5, style=\":\", label=\"min\")\n",
+    "s_max.plot(ax=ax, color=\"blue\", alpha=0.5, style=\":\", label=\"max\")\n",
+    "\n",
+    "plt.fill_between(s_min.index, s_min.values, s_max.values, facecolor='blue', alpha=0.1)\n",
+    "\n",
+    "ax.legend()\n",
+    "ax.set_xlabel('Time');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s_mean.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Pivot"
    ]
   },
@@ -2826,6 +2961,143 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Rolling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See https://stackoverflow.com/a/39917862"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Basic example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rolling window size: 1 day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dti = pd.DatetimeIndex(['2018-1-1 00:00', '2018-1-1 06:45', '2018-1-1 12:00',\n",
+    "                        '2018-1-2 00:00', '2018-1-2 06:00', '2018-1-2 12:00'])\n",
+    "ts = pd.Series([2., 1., 3., 2., 2., 0.], index=dti)\n",
+    "\n",
+    "print(\"DATA:\")\n",
+    "print(ts)\n",
+    "\n",
+    "ax = ts.plot(figsize=(18, 3), style=\"*-\", color=\"blue\")\n",
+    "ax.vlines(pd.DatetimeIndex(['2018-1-1 00:00', '2018-1-2 00:00']), ymin=0, ymax=8, color=\"red\", linestyle=\":\", alpha=0.3);\n",
+    "\n",
+    "ts_rw = ts.rolling('D').sum()   # Rolling window size: 1 day\n",
+    "\n",
+    "print()\n",
+    "print(\"MEAN:\")\n",
+    "print(ts_rw)\n",
+    "\n",
+    "ts_rw.plot(color=\"red\", label=\"sum\", style=\"*-\", alpha=0.75, ax=ax)\n",
+    "\n",
+    "ax.legend()\n",
+    "ax.set_xlabel('Time')\n",
+    "ax.grid(True);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts.rolling('6h').min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts.rolling('3h').mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### More realistic example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dti = pd.date_range('1/1/2018 00:00', periods=6*480, freq='10min')\n",
+    "ts = pd.Series(np.sin(dti.hour * 2. * np.pi / 24.), index=dti)\n",
+    "\n",
+    "ts = ts + np.random.normal(scale=0.4, size=ts.shape)\n",
+    "\n",
+    "ax = ts.plot(figsize=(18, 3))\n",
+    "ax.vlines(pd.date_range('1/1/2018 00:00', periods=480/24, freq='D'), ymin=-2, ymax=2, color=\"red\", linestyle=\":\", alpha=0.3);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts_mean = ts.rolling('5H').mean()\n",
+    "ts_median = ts.rolling('5H').median()\n",
+    "ts_min = ts.rolling('5H').min()\n",
+    "ts_max = ts.rolling('5H').max()\n",
+    "\n",
+    "ax = ts_mean.plot(y='duration', figsize=(18, 3), color=\"red\", label=\"mean\", alpha=0.75)\n",
+    "ts_median.plot(ax=ax, color=\"blue\", label=\"median\", alpha=0.75)\n",
+    "ts_min.plot(ax=ax, color=\"blue\", alpha=0.5, style=\":\", label=\"min\")\n",
+    "ts_max.plot(ax=ax, color=\"blue\", alpha=0.5, style=\":\", label=\"max\")\n",
+    "\n",
+    "plt.fill_between(ts_min.index, ts_min.values, ts_max.values, facecolor='blue', alpha=0.1)\n",
+    "\n",
+    "ax.legend()\n",
+    "ax.set_xlabel('Time');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts_mean.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Resampling"
    ]
   },
@@ -2859,26 +3131,22 @@
    "source": [
     "dti = pd.DatetimeIndex(['2018-1-1 00:00', '2018-1-1 06:45', '2018-1-1 12:00',\n",
     "                        '2018-1-2 00:00', '2018-1-2 12:00'])\n",
-    "ts = pd.Series([1., 0., 5., 2., 1.], index=dti)\n",
+    "ts = pd.Series([1., 0., 5., 2., 0.], index=dti)\n",
     "\n",
+    "print(\"DATA:\")\n",
     "print(ts)\n",
     "\n",
-    "ax = ts.plot(figsize=(18, 3))\n",
+    "ax = ts.plot(figsize=(18, 3), style=\"*-\", color=\"blue\")\n",
+    "ax.vlines(pd.DatetimeIndex(['2018-1-1 00:00', '2018-1-2 00:00']), ymin=0, ymax=5, color=\"red\", linestyle=\":\", alpha=0.3);\n",
     "\n",
-    "dti = pd.DatetimeIndex(['2018-1-1 00:00', '2018-1-2 00:00'])\n",
-    "ax.vlines(dti, ymin=0, ymax=5, color=\"red\", linestyle=\":\", alpha=0.3);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "ts_resampled = ts.resample('D').mean()\n",
+    "\n",
+    "print()\n",
+    "print(\"MEAN:\")\n",
     "print(ts_resampled)\n",
     "\n",
-    "ax = ts_resampled.plot(figsize=(10, 4), color=\"red\", label=\"mean\", alpha=0.75)\n",
+    "ts_resampled.plot(color=\"red\", style=\"*-\", label=\"mean\", alpha=0.75, ax=ax)\n",
+    "\n",
     "ax.legend()\n",
     "ax.set_xlabel('Time');"
    ]
@@ -2889,8 +3157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts_resampled = ts.resample('6h').min()\n",
-    "ts_resampled"
+    "ts.resample('6h').min()"
    ]
   },
   {
@@ -2899,8 +3166,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts_resampled = ts.resample('3h').sum()\n",
-    "ts_resampled"
+    "ts.resample('3h').sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### More realistic example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dti = pd.date_range('1/1/2018 00:00', periods=60*480, freq='min')\n",
+    "ts = pd.Series(np.sin(dti.hour * 2. * np.pi / 24.), index=dti)\n",
+    "\n",
+    "ts = ts + np.random.normal(scale=0.4, size=ts.shape)\n",
+    "\n",
+    "ax = ts.plot(figsize=(18, 3))\n",
+    "ax.vlines(pd.date_range('1/1/2018 00:00', periods=480/24, freq='D'), ymin=-2, ymax=2, color=\"red\", linestyle=\":\", alpha=0.3);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts_mean = ts.resample('2H').mean()\n",
+    "ts_median = ts.resample('2H').median()\n",
+    "ts_min = ts.resample('2H').min()\n",
+    "ts_max = ts.resample('2H').max()\n",
+    "\n",
+    "ax = ts_mean.plot(y='duration', figsize=(18, 8), color=\"red\", label=\"mean\", alpha=0.75)\n",
+    "ts_median.plot(ax=ax, color=\"blue\", label=\"median\", alpha=0.75)\n",
+    "ts_min.plot(ax=ax, color=\"blue\", alpha=0.5, style=\":\", label=\"min\")\n",
+    "ts_max.plot(ax=ax, color=\"blue\", alpha=0.5, style=\":\", label=\"max\")\n",
+    "\n",
+    "plt.fill_between(ts_min.index, ts_min.values, ts_max.values, facecolor='blue', alpha=0.1)\n",
+    "\n",
+    "ax.legend()\n",
+    "ax.set_xlabel('Time');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts_mean.shape"
    ]
   },
   {
