Improve a notebook and make it actually useful.

--- a/opendata_qualite_air_mesuree_dans_la_station_chatelet_fr.ipynb
+++ b/opendata_qualite_air_mesuree_dans_la_station_chatelet_fr.ipynb
@@ -67,12 +67,12 @@
    "source": [
     "url = \"https://data.iledefrance.fr/explore/dataset/qualite-de-lair-mesuree-dans-la-station-chatelet/download/?format=csv&timezone=Europe/Berlin&use_labels_for_header=true\"\n",
     "\n",
-    "dtype_dict = {'NO': np.float64,\n",
-    "              'NO2': np.float64,\n",
-    "              'PM10': np.float64,\n",
-    "              'CO2': np.float64,\n",
-    "              'TEMP': np.float64,\n",
-    "              'HUMI': np.float64}\n",
+    "#dtype_dict = {'NO': np.float64,\n",
+    "#              'NO2': np.float64,\n",
+    "#              'PM10': np.float64,\n",
+    "#              'CO2': np.float64,\n",
+    "#              'TEMP': np.float64,\n",
+    "#              'HUMI': np.float64}\n",
     "\n",
     "converter_dict = {'NO': conv_func,\n",
     "                  'NO2': conv_func,\n",
@@ -83,13 +83,16 @@
     "\n",
     "df = pd.read_csv(url,\n",
     "                 #encoding='iso-8859-1',\n",
+    "                 index_col=0,\n",
     "                 sep=';',\n",
     "                 decimal=',',\n",
+    "                 parse_dates=[\"DATE/HEURE\"],\n",
     "                 #dtype=dtype_dict,\n",
     "                 #na_values='ND',\n",
     "                 converters=converter_dict)\n",
     "\n",
-    "df.astype(dtype_dict)"
+    "#df.astype(dtype_dict)\n",
+    "df"
    ]
   },
   {
@@ -98,7 +101,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df"
+    "df = df.sort_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.dtypes"
    ]
   },
   {
@@ -117,6 +138,93 @@
    "outputs": [],
    "source": [
     "df.loc[:,['PM10', 'CO2']].plot(figsize=(16,6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.PM10.plot(figsize=(18,6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.PM10.resample('1D').mean().plot(figsize=(18,6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.PM10.rolling('7D').mean().plot(figsize=(18,6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.PM10.resample('1M').mean().plot(figsize=(18,6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = df.PM10.groupby(df.index.time).mean().plot(figsize=(18,6), color=\"blue\")\n",
+    "\n",
+    "ax.set_xlabel(\"Time\")\n",
+    "\n",
+    "ax2 = ax.twinx()\n",
+    "df.TEMP.groupby(df.index.time).mean().plot(ax=ax2, color=\"red\")\n",
+    "\n",
+    "ax.legend(loc='upper left')\n",
+    "ax2.legend(loc='upper right');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = df.PM10.groupby(df.index.weekday).mean().plot(figsize=(18,6), color=\"blue\")\n",
+    "\n",
+    "ax.set_xlabel(\"Weekday\")\n",
+    "\n",
+    "ax2 = ax.twinx()\n",
+    "df.TEMP.groupby(df.index.weekday).mean().plot(ax=ax2, color=\"red\")\n",
+    "\n",
+    "ax.legend(loc='upper left')\n",
+    "ax2.legend(loc='upper right');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = df.PM10.groupby(df.index.month).mean().plot(figsize=(18,6), color=\"blue\")\n",
+    "\n",
+    "ax.set_xlabel(\"Month\")\n",
+    "\n",
+    "ax2 = ax.twinx()\n",
+    "df.TEMP.groupby(df.index.month).mean().plot(ax=ax2, color=\"red\")\n",
+    "\n",
+    "ax.legend(loc='upper left')\n",
+    "ax2.legend(loc='upper right');"
    ]
   },
   {
