--- a/opendata_qualite_air_mesuree_dans_la_station_chatelet_fr.ipynb
+++ b/opendata_qualite_air_mesuree_dans_la_station_chatelet_fr.ipynb
@@ -18,13 +18,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TODO**: l'index du *dataframe* devrait être constitué de la fusion des deux premières colonnes avec le bon *dtype* (un *datetime* Pandas)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Récupération des données"
    ]
   },
@@ -89,10 +82,7 @@
     "                 parse_dates=[\"DATE/HEURE\"],\n",
     "                 #dtype=dtype_dict,\n",
     "                 #na_values='ND',\n",
-    "                 converters=converter_dict)\n",
-    "\n",
-    "#df.astype(dtype_dict)\n",
-    "df"
+    "                 converters=converter_dict)"
    ]
   },
   {
@@ -105,12 +95,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df.index"
+    "## Infos diverses sur le DataFrame"
    ]
   },
   {
@@ -119,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.dtypes"
+    "df.head()"
    ]
   },
   {
@@ -137,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.loc[:,['PM10', 'CO2']].plot(figsize=(16,6))"
+    "df.dtypes"
    ]
   },
   {
@@ -146,7 +134,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.PM10.plot(figsize=(18,6))"
+    "df.index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analyse de la concentration en particules fines (PM10)"
    ]
   },
   {
@@ -155,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.PM10.resample('1D').mean().plot(figsize=(18,6))"
+    "df.PM10.plot(figsize=(18,6));"
    ]
   },
   {
@@ -164,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.PM10.rolling('7D').mean().plot(figsize=(18,6))"
+    "df.PM10.resample('7D').mean().plot(figsize=(18,6));"
    ]
   },
   {
@@ -173,7 +168,83 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.PM10.resample('1M').mean().plot(figsize=(18,6))"
+    "df.PM10.rolling('7D').mean().plot(figsize=(18,6));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.PM10.resample('1M').mean().plot(figsize=(18,6));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts = df.PM10\n",
+    "\n",
+    "# https://jakevdp.github.io/PythonDataScienceHandbook/03.11-working-with-time-series.html#Digging-into-the-data\n",
+    "\n",
+    "ts_mean = ts.groupby(ts.index.time).mean()\n",
+    "ts_median = ts.groupby(ts.index.time).median()\n",
+    "ts_quartile_1 = ts.groupby(ts.index.time).quantile(0.25)\n",
+    "ts_quartile_3 = ts.groupby(ts.index.time).quantile(0.75)\n",
+    "ts_percentile_5 = ts.groupby(ts.index.time).quantile(0.05)\n",
+    "ts_percentile_95 = ts.groupby(ts.index.time).quantile(0.95)\n",
+    "ts_min = ts.groupby(ts.index.time).min()\n",
+    "ts_max = ts.groupby(ts.index.time).max()\n",
+    "\n",
+    "color = \"blue\"\n",
+    "ax = ts_mean.plot(y='duration', figsize=(18, 12), color=color, label=\"mean\", alpha=0.75)\n",
+    "ts_median.plot(ax=ax, color=color, label=\"median\", style=\"--\", alpha=0.75)\n",
+    "ts_quartile_1.plot(ax=ax, color=color, alpha=0.5, style=\"-.\", label=\"1st quartile\")\n",
+    "ts_quartile_3.plot(ax=ax, color=color, alpha=0.5, style=\"-.\", label=\"3rd quartile\")\n",
+    "ts_percentile_5.plot(ax=ax, color=color, alpha=0.25, style=\":\", label=\"5th percentile\")\n",
+    "ts_percentile_95.plot(ax=ax, color=color, alpha=0.25, style=\":\", label=\"95th percentile\")\n",
+    "ts_min.plot(ax=ax, color=color, alpha=0.2, style=\":\", label=\"min\")\n",
+    "ts_max.plot(ax=ax, color=color, alpha=0.2, style=\":\", label=\"max\")\n",
+    "\n",
+    "plt.fill_between(ts_percentile_5.index, ts_percentile_5.values, ts_percentile_95.values, facecolor=color, alpha=0.1)\n",
+    "plt.fill_between(ts_quartile_1.index, ts_quartile_1.values, ts_quartile_3.values, facecolor=color, alpha=0.1)\n",
+    "\n",
+    "ts = df.TEMP\n",
+    "ax2 = ax.twinx()\n",
+    "\n",
+    "# https://jakevdp.github.io/PythonDataScienceHandbook/03.11-working-with-time-series.html#Digging-into-the-data\n",
+    "\n",
+    "ts_mean = ts.groupby(ts.index.time).mean()\n",
+    "ts_median = ts.groupby(ts.index.time).median()\n",
+    "ts_quartile_1 = ts.groupby(ts.index.time).quantile(0.25)\n",
+    "ts_quartile_3 = ts.groupby(ts.index.time).quantile(0.75)\n",
+    "ts_percentile_5 = ts.groupby(ts.index.time).quantile(0.05)\n",
+    "ts_percentile_95 = ts.groupby(ts.index.time).quantile(0.95)\n",
+    "ts_min = ts.groupby(ts.index.time).min()\n",
+    "ts_max = ts.groupby(ts.index.time).max()\n",
+    "\n",
+    "color = \"red\"\n",
+    "ax2 = ts_mean.plot(y='duration', figsize=(18, 12), color=color, label=\"mean\", alpha=0.75)\n",
+    "ts_median.plot(ax=ax2, color=color, label=\"median\", style=\"--\", alpha=0.75)\n",
+    "ts_quartile_1.plot(ax=ax2, color=color, alpha=0.5, style=\"-.\", label=\"1st quartile\")\n",
+    "ts_quartile_3.plot(ax=ax2, color=color, alpha=0.5, style=\"-.\", label=\"3rd quartile\")\n",
+    "ts_percentile_5.plot(ax=ax2, color=color, alpha=0.25, style=\":\", label=\"5th percentile\")\n",
+    "ts_percentile_95.plot(ax=ax2, color=color, alpha=0.25, style=\":\", label=\"95th percentile\")\n",
+    "ts_min.plot(ax=ax2, color=color, alpha=0.2, style=\":\", label=\"min\")\n",
+    "ts_max.plot(ax=ax2, color=color, alpha=0.2, style=\":\", label=\"max\")\n",
+    "\n",
+    "plt.fill_between(ts_percentile_5.index, ts_percentile_5.values, ts_percentile_95.values, facecolor=color, alpha=0.1)\n",
+    "plt.fill_between(ts_quartile_1.index, ts_quartile_1.values, ts_quartile_3.values, facecolor=color, alpha=0.1)\n",
+    "\n",
+    "ax.legend(loc='upper left')\n",
+    "ax2.legend(loc='upper right');\n",
+    "\n",
+    "ax.set_xlabel('Time')\n",
+    "ax.set_ylabel('PM10');\n",
+    "ax2.set_ylabel('Temperature');"
    ]
   },
   {
@@ -225,24 +296,6 @@
     "\n",
     "ax.legend(loc='upper left')\n",
     "ax2.legend(loc='upper right');"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.loc[:,['NO', 'NO2']].plot(figsize=(16,6))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.loc[:,['TEMP', 'HUMI']].plot(figsize=(16,6))"
    ]
   }
  ],
