Add an illustration.

--- a/python_pandas_en.ipynb
+++ b/python_pandas_en.ipynb
@@ -3235,6 +3235,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Difference between `rolling()` and `resample()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rolling_window = '6H'\n",
+    "start = '2018-1-1 00:00'\n",
+    "end = '2018-1-4 00:00'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dti = pd.date_range(start=start, end=end, freq='min')\n",
+    "ts = pd.Series(np.sin(dti.hour * 2. * np.pi / 24.), index=dti)\n",
+    "ts = ts + np.random.normal(scale=0.4, size=ts.shape)\n",
+    "\n",
+    "ax = ts.plot(figsize=(18, 3))\n",
+    "ax.vlines(pd.date_range(start=start, end=end, freq=rolling_window), ymin=-2, ymax=2, color=\"red\", linestyle=\":\", alpha=0.5);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts2 = ts.rolling(rolling_window).mean()   # Rolling window size: 1 day\n",
+    "\n",
+    "ax = ts2.plot(figsize=(18, 3), color=\"red\", alpha=0.75)\n",
+    "ax.vlines(pd.date_range(start=start, end=end, freq=rolling_window), ymin=-1, ymax=1, color=\"red\", linestyle=\":\", alpha=0.5);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts2 = ts.resample(rolling_window).mean()   # Rolling window size: 1 day\n",
+    "\n",
+    "ax = ts2.plot(figsize=(18, 3), color=\"red\", alpha=0.75)\n",
+    "ax.vlines(pd.date_range(start=start, end=end, freq=rolling_window), ymin=-1, ymax=1, color=\"red\", linestyle=\":\", alpha=0.5);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Group by"
    ]
   },
