Add badges + 'round' section.

--- a/python_pandas_en.ipynb
+++ b/python_pandas_en.ipynb
@@ -23,10 +23,30 @@
     "**TODO**:\n",
     "- setting (modify a dataframe): df.at[...], df.iat[...] http://pandas.pydata.org/pandas-docs/stable/10min.html#setting\n",
     "- HDF5\n",
-    "- dates (...)\n",
     "- apply() http://pandas.pydata.org/pandas-docs/stable/10min.html#apply\n",
     "- Histogramming http://pandas.pydata.org/pandas-docs/stable/10min.html#histogramming\n",
     "- Concat / append"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Source: https://github.com/jdhp-docs/notebooks/blob/master/python_pandas_en.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/jdhp-docs/notebooks/blob/master/python_pandas_en.ipynb\"><img align=\"left\" src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\" title=\"Open and Execute in Google Colaboratory\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/jdhp-docs/notebooks/master?filepath=python_pandas_en.ipynb)"
    ]
   },
   {
@@ -66,6 +86,7 @@
     "\n",
     "import matplotlib\n",
     "matplotlib.rcParams['figure.figsize'] = (9, 9)\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "import datetime\n",
     "import pandas as pd\n",
@@ -3462,6 +3483,34 @@
     "\n",
     "ax.legend()\n",
     "ax.set_xlabel('Time');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Round"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dti = pd.DatetimeIndex(['2018-1-1 00:00', '2018-1-1 12:00', '2018-1-2 00:31', '2018-1-2 12:25'])  # Here time is not aligned (non constant frequency)\n",
+    "ts = pd.Series([1., 0., 2., 1.], index=dti)\n",
+    "\n",
+    "print(ts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts.index.round('H')"
    ]
   },
   {
