--- a/python_pandas_en.ipynb
+++ b/python_pandas_en.ipynb
@@ -1845,6 +1845,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# df['B'][df['B'] < 50.] = 0    # OK but chain indexing is bad...\n",
+    "# df.A[df.B < 50.] = 0          # OK but chain indexing is bad...\n",
+    "df.loc[df.B < 50., 'A'] = 0\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**WARNING**: `df[df.B < 50.].A = 0` does *NOT* work even if `df.A[df.B < 50.]` and `df[df.B < 50.].A` seems to produce the same result...\n",
+    "\n",
+    "\"When setting values in a pandas object, care must be taken to avoid what is called *chained indexing*\".\n",
+    "\n",
+    "See:\n",
+    "- http://pandas.pydata.org/pandas-docs/stable/indexing.html#returning-a-view-versus-a-copy\n",
+    "- http://pandas.pydata.org/pandas-docs/stable/indexing.html#why-does-assignment-fail-when-using-chained-indexing\n",
+    "- http://pandas.pydata.org/pandas-docs/stable/indexing.html#evaluation-order-matters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[(df.B < 50.) & (df.B > 20), 'C'] = 0\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df[df.B < 50.] = pow(df[df.B < 50.], 2)\n",
     "df"
    ]
@@ -3511,6 +3547,59 @@
    "outputs": [],
    "source": [
     "ts.index.round('H')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO: is it the cleanest way to do this ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dti = pd.DatetimeIndex(['2018-1-1 00:00', '2018-1-1 06:45', '2018-1-1 12:00',\n",
+    "                        '2018-1-3 00:00', '2018-1-3 06:00'])\n",
+    "\n",
+    "s = pd.Series(np.ones(dti.shape), index=dti)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#dti.groupby(dti.date)     # it works but it returns a dictionary..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s.groupby(dti.date).count().plot.bar(color=\"blue\", alpha=0.5);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s.resample('1d').count().plot.bar(color=\"blue\", alpha=0.5);"
    ]
   },
   {
