Add some snippets and improve some other.

--- a/python_pandas_en.ipynb
+++ b/python_pandas_en.ipynb
@@ -1703,7 +1703,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[df.A >= 2][df.B < 50]"
+    "df[(df.A >= 2) & (df.B < 50)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This can be written:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[(df.A >= 2) & (df.B < 50)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This could be written `df[df.A >= 2][df.B < 50]` but this is a bad practice (named \"chained indexing\").\n",
+    "\n",
+    "\"When setting values in a pandas object, care must be taken to avoid what is called *chained indexing*\".\n",
+    "\n",
+    "See:\n",
+    "- http://pandas.pydata.org/pandas-docs/stable/indexing.html#returning-a-view-versus-a-copy\n",
+    "- http://pandas.pydata.org/pandas-docs/stable/indexing.html#why-does-assignment-fail-when-using-chained-indexing\n",
+    "- http://pandas.pydata.org/pandas-docs/stable/indexing.html#evaluation-order-matters"
    ]
   },
   {
@@ -1732,7 +1762,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[df.A >= 2][df.B < 50]"
+    "df[(df.A >= 2) & (df.B < 50)]"
    ]
   },
   {
@@ -1741,7 +1771,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[df['A'] >= 2][df['B'] < 50]"
+    "df[(df['A'] >= 2) & (df['B'] < 50)]"
    ]
   },
   {
@@ -1750,16 +1780,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[df.A >= 2][df.B < 50].loc[:,['A','B']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[df.A >= 2][df.B < 50][['A','B']]"
+    "df.loc[(df.A >= 2) & (df.B < 50), ['A','B']]"
    ]
   },
   {
@@ -1882,6 +1903,176 @@
    "outputs": [],
    "source": [
     "df[df.B < 50.] = pow(df[df.B < 50.], 2)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sample rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_array = np.array([np.arange(1, 10, 1), np.arange(10, 100, 10), np.arange(100, 1000, 100)]).T\n",
+    "df = pd.DataFrame(data_array,\n",
+    "                  index=np.arange(1, 10, 1),\n",
+    "                  columns=['A', 'B', 'C'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### With replacement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Draw 3 samples:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.sample(n=30, replace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sample 90% of the rows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.sample(frac=0.9, replace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Without replacement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Draw 3 samples:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.sample(n=3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sample 90% of the rows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.sample(frac=0.9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Weighted sampling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.sample(n=30, replace=True, weights=np.arange(len(df)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Shuffle/permute rows"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See:\n",
+    "- https://stackoverflow.com/a/35784666\n",
+    "- https://stackoverflow.com/a/34879805"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_array = np.array([np.arange(1, 10, 1), np.arange(10, 100, 10), np.arange(100, 1000, 100)]).T\n",
+    "df = pd.DataFrame(data_array,\n",
+    "                  index=np.arange(1, 10, 1),\n",
+    "                  columns=['A', 'B', 'C'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.sample(frac=1)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To reset indexes too:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.sample(frac=1).reset_index(drop=True)\n",
     "df"
    ]
   },
